[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene.gd" type="Script" id=1]

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 40 )
text = "click 2 points or click and drag to draw a path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 13.0
margin_top = 48.0
margin_right = 363.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemovePath2DButton" type="Button" parent="HBoxContainer"]
margin_right = 114.0
margin_bottom = 40.0
text = "Remove Path2D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearPointsButton" type="Button" parent="HBoxContainer"]
margin_left = 118.0
margin_right = 206.0
margin_bottom = 40.0
text = "Clear Points"

[node name="LocalToSceneToggleCheckButton" type="CheckButton" parent="HBoxContainer"]
margin_left = 210.0
margin_right = 458.0
margin_bottom = 40.0
text = "New path is local to scene"

[connection signal="pressed" from="HBoxContainer/RemovePath2DButton" to="." method="_on_RemovePath2DButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ClearPointsButton" to="." method="_on_ClearPointsButton_pressed"]
[connection signal="toggled" from="HBoxContainer/LocalToSceneToggleCheckButton" to="." method="_on_LocalToSceneToggleCheckButton_toggled"]
